# doctldr

./: Cargo.toml  README.md
docs/: SPECIFICATION.md  doctldr.1
src/: main.rs
src/config/: mod.rs
src/llm/: mod.rs
src/output/: mod.rs
src/processing/: mod.rs
